feat: Complete migration to Radium HTTP API with enhanced features
🎯 MAJOR MIGRATION: Redis/MongoDB → Radium HTTP API
- Removed all Redis and MongoDB dependencies and code
- Implemented RadiumCommandForwarder for HTTP API integration
- Updated API endpoint to /api/v1/commands/execute-with-response

✨ NEW FEATURES:
- Full punishment command system (/ban, /unban, /tempban, /mute, /unmute, /kick, /checkpunishments)
- Enhanced inventory protection (prevents moving/dropping lobby items)
- Comprehensive join item protection system
- Permission-based tab completion (staff see all, players see none)

🔧 PERMISSION SYSTEM OVERHAUL:
- Updated all admin commands to use radium.command.* format
- Enhanced permission checks for better security
- Added bypass permissions for protection systems

🎨 UI/UX IMPROVEMENTS:
- Fixed tablist footer with working placeholders (%ping%, %global_players%)
- Removed unwanted join items (only Compass + Redstone remain)
- Improved error handling and user feedback
- Enhanced chat system with admin bypass

🛡️ PROTECTION SYSTEMS:
- Inventory click protection (prevents moving lobby items)
- Item drop/pickup protection with bypass permissions
- Hotbar swap protection (F key)
- Enhanced event handling with proper Minestom API usage

📚 DOCUMENTATION:
- Added comprehensive setup guides (RADIUM_PERMISSIONS_SETUP.md)
- Created troubleshooting documentation (TROUBLESHOOTING.md)
- Added urgent fixes summary (URGENT_FIXES_APPLIED.md)

✅ TESTING & VALIDATION:
- All compilation errors fixed
- Successful build verification
- Ready for production deployment

BREAKING CHANGES:
- Requires Radium proxy setup with proper permissions
- Database config sections removed from config.yml
- Permission format changed from lobby.* to radium.command.*

Co-authored-by: GitHub Copilot <noreply@github.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,22 +8,19 @@ radium:
     default_rank: "Default"
     default_prefix: "&7"
 
-database:
-  mongodb:
-    connection_string: "mongodb://radium:radium123@localhost:27017"
-    database_name: "lobby"
-  redis:
-    enabled: false  # Disabled since we're using Radium HTTP API
-    host: "localhost"
-    port: 6379
-    password: "radium123"
-    database: 0
+# HTTP API for gamemode synchronization with Radium proxy
+http_api:
+  enabled: true
+  host: "0.0.0.0"
+  port: 8081  # Use 8081 since Radium uses 8080
+  endpoints:
+    gamemode: "/api/gamemode"
 
 spawn:
   world: "lobby"
-  x: 0.5
-  y: 100.0
-  z: 0.5
+  x: 110.0
+  y: 78.0
+  z: 65.0
   yaw: 0.0
   pitch: 0.0
 
@@ -48,10 +45,7 @@ schematics:
 lobby:
   join-items:
     "0": "COMPASS:&bServer Selector"
-    "1": "REDSTONE:&ePlayer Visibility" 
-    "4": "NETHER_STAR:&6Lobby Items"
-    "7": "BOOK:&aServer Info"
-    "8": "BARRIER:&cLeave Server"
+    "1": "REDSTONE:&ePlayer Visibility"
 
 queue:
   enabled: true
@@ -71,40 +65,46 @@ queue:
 
 scoreboard:
   enabled: true
-  title: "&dMythic&fPvP"  # Light pink "Mythic" + white "PvP"
+  title: "&d&lMythicPvP"  # Light pink and bold "MythicPvP"
+  servers:
+    prison: 42      # Mock player count
+    gens: 28        # Mock player count  
+    skyblock: 35    # Mock player count
+    dungeons: 15    # Mock player count
   lines:
-    # Bottom to top order (higher line numbers appear higher on scoreboard)
-    - "&dplay.mythicpvp.net"  # Server IP (bottom line - light pink)
-    - "%date%"  # Current date (white)
-    - ""  # Empty line
-    - " ▌ &aSkyblock &2[%skyblock_players%]"  # Light green "Skyblock" + dark green player count
-    - " ▌ &cGens &4[%gens_players%]"  # Light red "Gens" + dark red player count  
-    - " ▌ &bPrison &1[%prison_players%]"  # Light blue "Prison" + dark blue player count
-    - " ▌ &dServers"  # Light pink "Servers" header
-    - ""  # Empty line
-    - " ▌ &7Server: &f%current_server%"  # Gray "Server:" + white server name
-    - " ▌ &7Player: &f%player_name%"  # Gray "Player:" + white player name
-    - " ▌ &dInformation"  # Light pink "Information" header
-    - ""  # Empty line
-    - "&7      Lobby Server      "  # Centered gray text right under title
+    # Exact format from top to bottom as displayed
+    - "&8      Lobby Server      "        # Right under title: Dark grey centered text
+    - ""                                  # Blank line
+    - "&5┃ &dInformation"                 # Purple "┃" + light pink "Information" header
+    - "&5┃ &7Player: &f%player_name%"     # Purple "┃" + gray "Player:" + white player name
+    - "&5┃ &7Server: &f%current_server%"  # Purple "┃" + gray "Server:" + white server name
+    - ""                                  # Blank line
+    - "&5┃ &dServers"                     # Purple "┃" + pink "Servers" header
+    - "&5┃ &eSkyblock &6[%skyblock_players%]" # Purple "┃" + yellow "Skyblock" + gold player count
+    - "&5┃ &bPrison &1[%prison_players%]" # Purple "┃" + light blue "Prison" + dark blue player count
+    - "&5┃ &aGens &2[%gens_players%]"     # Purple "┃" + light green "Gens" + dark green player count
+    - "&5┃ &cDungeons &4[%dungeons_players%]"  # Purple "┃" + light red "Dungeons" + dark red player count
+    - ""                                  # Blank line
+    - "&dmythicpvp.net"                   # Bottom: Server IP in light pink
 
-# Tab list formatting - respects Radium prefixes
+# Tab list formatting - matches MythicHub exactly
 tablist:
   enabled: true
   header:
     - ""
-    - "&d&lMythic&f&lPvP"
-    - "&7play.mythicpvp.net"
+    - "     &d&lMYTHIC&f&lPVP"            # Centered bold title with proper spacing
+    - ""                                  # Blank line
+    - "     Connected to: %server_name%"  # Connected to line with server name
+    - "      play.mythicpvp.net"          # Server IP in gray
     - ""
   footer:
     - ""
-    - "&7Online: &f%online_players%"
-    - "&7Server: &fLobby"
+    - "&5Hub &8// &f%ping% &8* &dstore.mythicpvp.net"
+    - "&d%global_players% &fGlobal"
     - ""
-  # Player name formatting (only applies if Radium doesn't provide formatting)
-  fallback_format: "&7%player_name%"
-  # Don't override Radium formatting
-  respect_radium_formatting: true
+  # Player name formatting using Radium integration
+  player_format: "%prefix%%color%%player%"  # Radium format: prefix + color + player name
+  fallback_format: "&7%player_name%"        # Fallback for players without ranks
 
 # World lighting and weather - keeps lobby bright
 world_lighting:
@@ -149,6 +149,13 @@ messages:
     reload_failed: "&cFailed to reload schematics: %error%"
     no_permission: "&cYou don't have permission to use schematic commands!"
   
+  # Punishment messages
+  punishment:
+    executing: "&7Executing command..."
+    failed: "&cFailed to execute punishment command: %error%"
+    api_offline: "&cUnable to connect to Radium punishment system"
+    invalid_duration: "&cInvalid duration format. Examples: 1d, 2h, 30m, 1w"
+  
   # Protection messages
   protection:
     block_break: "&cYou cannot break blocks here!"
@@ -187,3 +194,9 @@ server:
     enabled: true
     secret: "radium-velocity-secret"  # Should match velocity.toml forwarding-secret
   bind_address: "0.0.0.0"
+  
+  # HTTP API for gamemode synchronization
+  api:
+    enabled: true
+    port: 8081  # Different port from main server
+    bind_address: "0.0.0.0"
