Implement vanish system integration with Radium proxy
Major Features:
- Added vanish status checking methods to RadiumIntegration
- Updated TabListManager to respect vanish status and show indicators
- Enhanced VisibilityManager with vanish-aware player visibility
- Updated PlayerJoinListener to handle vanished players on join
- Added comprehensive vanish configuration options

Detailed Changes:
1. RadiumIntegration.kt:
   - Added isPlayerVanished() method to check vanish status via API
   - Added canSeeVanishedPlayer() method for visibility permissions
   - Uses /v1/player/{uuid}/vanish and /v1/player/{viewer}/can-see-vanished/{target} endpoints

2. TabListManager.kt:
   - Enhanced updatePlayerDisplayNames() to respect vanish status
   - Hides vanished players from tab list if viewer cannot see them
   - Adds (Vanished) indicator for staff who can see vanished players
   - Added configuration options for vanish behavior

3. VisibilityManager.kt:
   - Updated isStaff() method to use Radium API (radium.staff permission)
   - Added updateVisibilityForNewPlayer() with vanish consideration
   - Handles complex visibility rules combining user preferences and vanish status

4. PlayerJoinListener.kt:
   - Checks vanish status on player join
   - Calls visibility manager to update all player visibility rules
   - Logs vanished player joins for debugging

5. Configuration Updates:
   - Added tablist.respect_vanish_status and show_vanish_indicator options
   - Added radium.vanish configuration section with cache settings
   - Maintained backwards compatibility with existing configs

Implementation Notes:
- Vanish API integration follows the established pattern from other Radium endpoints
- Proper error handling and fallbacks for API failures
- Build successful with only minor unused variable warnings
- Player visibility methods are placeholders pending proper Minestom API research

This lays the foundation for seamless vanish integration between lobby and proxy.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,6 +7,11 @@ radium:
   fallback:
     default_rank: "Default"
     default_prefix: "&7"
+  # Vanish Integration
+  vanish:
+    respect_status: true  # NEW: Respect vanish status from proxy
+    hide_from_tab: true   # NEW: Hide vanished players from tab if viewer can't see them
+    cache_duration: 30    # NEW: Cache vanish status for X seconds
 
 # HTTP API for gamemode synchronization with Radium proxy
 http_api:
@@ -90,6 +95,10 @@ scoreboard:
 # Tab list formatting - matches MythicHub exactly
 tablist:
   enabled: true
+  respect_radium_formatting: true
+  respect_vanish_status: true  # NEW: Respect vanish status from Radium
+  show_vanish_indicator: true  # NEW: Show (Vanished) indicator to staff
+  update_interval: 100  # ticks
   header:
     - ""
     - "     &d&lMYTHIC&f&lPVP"            # Centered bold title with proper spacing
