--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,33 +1,17 @@
 radium:
   api:
-    base_url: "http://localhost:schematics:
-  enabled: true
-  paste_on_startup: true
-  async_operations: true
-  cache_enabled: true
-  cache_max_size: 10
-  files:
-    lobby:
-      file: "schematics/lobby.schematic"
-      origin:
-        x: 0
-        y: 64
-        z: 0
-      rotation: 0  # 0, 90, 180, 270 degrees
-      mirror: false
-      paste_air: false
-      enabled: true
-    test:
-      file: "schematics/test.schem"
-      origin:
-        x: 100
-        y: 64
-        z: 0
-      rotation: 0
-      mirror: false
-      paste_air: false
-      enabled: falset: 5000
+    base_url: "http://localhost:7777"
+    timeout: 5000
     retry_attempts: 3
+    endpoints:
+      punishments: "/api/punishments"
+      player_data: "/api/player"
+      servers: "/api/servers"
+  vanish:
+    respect_status: true      # Enable vanish integration
+    hybrid_mode: true         # Use hybrid system (plugin messages + HTTP fallback)
+    hide_from_tab: true       # Hide from tab list based on permissions
+    cache_duration: 30        # Cache duration (seconds)
     cache_duration: 300 # 5 minutes
   fallback:
     default_rank: "Default"
@@ -94,9 +78,9 @@ schematics:
     test:
       file: "schematics/test.schem"
       origin:
-        x: 20
+        x: 100
         y: 64
-        z: 20
+        z: 0
       rotation: 0
       mirror: false
       paste_air: false
