--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,31 +1,25 @@
 radium:
   api:
-    base_url: "http://localhost:7777"
+    base_url: "http://localhost:7777"  # FIXED: Proper Radium proxy API port
     timeout: 5000
     retry_attempts: 3
     endpoints:
       punishments: "/api/punishments"
       player_data: "/api/player"
       servers: "/api/servers"
-  vanish:
-    respect_status: true      # Enable vanish integration
-    hybrid_mode: true         # Use hybrid system (plugin messages + HTTP fallback)
-    hide_from_tab: true       # Hide from tab list based on permissions
-    cache_duration: 30        # Cache duration (seconds)
-    cache_duration: 300 # 5 minutes
-  fallback:
-    default_rank: "Default"
-    default_prefix: "&7"
   # Hybrid Vanish Integration
   vanish:
-    respect_status: true      # NEW: Respect vanish status from proxy via plugin messages
-    hybrid_mode: true         # NEW: Use hybrid vanish system (plugin messages + HTTP fallback)
-    hide_from_tab: true       # NEW: Hide vanished players from tab if viewer can't see them
-    cache_duration: 30        # NEW: Cache vanish status for X seconds
+    respect_status: true      # Respect vanish status from proxy via plugin messages
+    hybrid_mode: true         # Use hybrid vanish system (plugin messages + HTTP fallback)
+    hide_from_tab: true       # Hide vanished players from tab if viewer can't see them
+    cache_duration: 30        # Cache vanish status for X seconds
     # NOTE: The hybrid system uses plugin messages from Radium proxy for real-time updates
     # and falls back to HTTP API '/api/players/uuid/{uuid}/vanish' when needed:
     # - 200 + {"vanished": boolean, "level": "HELPER|MODERATOR|ADMIN|OWNER"} for online players
     # - 404 for offline/disconnected players (treated as not vanished)
+  fallback:
+    default_rank: "Default"
+    default_prefix: "&7"
 
 # Redis Configuration for Real-time Punishment Updates
 redis:
